tests/analyze/error-erase-type/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `raw`, but found `error`.
> 1 | # Pins the erase-late `try` rules. `loud` erases a precise `parse-error` into
      ^
